--- a/src/pages/Product/Product.styles.css
+++ b/src/pages/Product/Product.styles.css
@@ -1,6 +1,84 @@
 .container-detail-product {
   display: grid;
-  grid-template-columns: 1fr minmax(auto, 450px);
+  grid-template-columns: 450px 350px;
+  column-gap: 120px;
+  justify-content: center;
   height: calc(100% - 80px);
-  align-content: center;
+}
+
+.wrapper-info {
+  height: 500px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.column-info,
+.column-image {
+  display: flex;
+  align-items: center;
+}
+
+.column-info h1 {
+  font-size: 18px;
+  line-height: 18px;
+  font-style: italic;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.column-info h3 {
+  font-size: 16px;
+  line-height: 18px;
+  font-style: italic;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.buy-button {
+  width: 100%;
+  margin-top: 25px;
+  border-radius: 5px;
+  background-color: #ff4f00;
+  color: #fff;
+  height: 55px;
+}
+
+.buy-button:focus {
+  outline: none;
+}
+
+.product-prices {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 20px;
+  margin-top: 35px;
+  font-style: italic;
+  text-transform: uppercase;
+}
+
+.product-price-value {
+  color: #999;
+  font-size: 26px;
+  line-height: 22px;
+  font-weight: 500;
+}
+
+.product-price-instalments {
+  color: #ff4f00;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: right;
+  font-weight: 500;
+}
+
+.product-price-instalments span {
+  display: block;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 500;
 }
