--- a/src/components/Header/Header.styles.css
+++ b/src/components/Header/Header.styles.css
@@ -19,9 +19,10 @@ header {
 }
 
 .search {
-  width: 100%;
+  width: 300px;
   position: relative;
   display: flex;
+  margin-right: 20px;
 }
 
 .searchTerm {
@@ -55,6 +56,36 @@ header {
 }
 
 .wrap {
-  width: 30%;
+  width: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 /* ---- headers ---- */
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav > button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav > button > svg {
+  margin-left: 10px;
+}
+
+.user-name {
+  margin-right: 20px;
+  color: white;
+  font-weight: bold;
+}
